fix(aio): fix SideNav items alignment (#17106)
Fixes #17097

--- a/aio/src/styles/1-layouts/_sidenav.scss
+++ b/aio/src/styles/1-layouts/_sidenav.scss
@@ -140,7 +140,7 @@ button.vertical-menu-item {
   font-size: 14px;
   color: $mediumgray;
   font-weight: 400;
-  padding-left: 24px;
+  padding-left: 20px;
   text-transform: none;
 }
 
